--- a/lol.html
+++ b/lol.html
@@ -47,7 +47,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7 col-sm-12"><p> A League of Legends (rövidítve: LoL) valós idejű stratégiai játék, illetve online többjátékos csatamező, melyet a Warcraft III: The Frozen Throne videójátékhoz készült Defense of the Ancients (röviden DotA) mod ihletett. A játék fejlesztője és egyben kiadója a Riot Games; Kínában a Tencent Holdings forgalmazza.</p>
                     <p> A játék bejelentésére 2008. október 7-én került sor; a zárt bétateszt 2009. április 10-én vette kezdetét és 2009. október 22-én ért véget. Ezután a tesztelés lehetősége mindenki számára elérhetővé vált. A játék végül 2009. október 27-én jelent meg.</p></div>
-                        <div class="col-lg-7 col-md-5 col-sm-12"><img src="lol képek\league-of-legends.jpg"></div>
+                        <div class="col-lg-7 col-md-5 col-sm-12"><img src="lol képek\league-of-legends.jpg" style="width: 100%;"></div>
                     </div>
                 <br>
                     
@@ -56,24 +56,38 @@
             <h1 class="lolcím"><b>A játék menete</b></h1>
             <hr style="text-align: center"><br>
             <h3 class ="lol-közép"> Általános tudnivalók</h3>
-            <table>
-                <tr>
-                <td>
-                    <p> A játékos regisztráció után az úgynevezett láthatatlan "Idéző" szerepébe bújik, aki egy egyedülálló mágikus képességekkel rendelkező hőst tud irányítani akinek célja, hogy csapattársai segítségével legyőzze az ellenfél csapatot. A három különböző pályán a játékosok két egyenlő, 3 illetve 5 fős csapatokra oszlanak, mindenki egy általa vagy véletlenszerűen választott hőst irányítva. A csapatok a térkép két átellenes pontján kezdenek egy Érkező Medence (Spawn Pool) nevű helyen, a Nexus (főközpont, szó szerint: összeköttetés) mellett. Az ellenfél Nexusának elpusztításával lehet megnyerni a játékot, vagy ha az ellenfél csapata feladja.</p>
-                    <p> A hősök a játék során folyamatosan tapasztalatot és aranyat gyűjtenek, ellenséges lények (hősök és minionok) illetve semleges szörnyek legyilkolásával, valamint tornyok és inhibitorok lerombolásával. Az aranyból különféle tárgyakat vehetnek, amelyek fokozzák a hatékonyságukat, képességeik erejét, vagy védelmet adnak. Első szinten kezdenek és a 18. szintig fejlődhetnek minden játék alkalmával, míg az Idézői szint, folyamatosan növekszik.</p>
+            <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12"> <p> A játékos regisztráció után az úgynevezett láthatatlan "Idéző" szerepébe bújik, aki egy egyedülálló mágikus képességekkel rendelkező hőst tud irányítani akinek célja, hogy csapattársai segítségével legyőzze az ellenfél csapatot. A három különböző pályán a játékosok két egyenlő, 3 illetve 5 fős csapatokra oszlanak, mindenki egy általa vagy véletlenszerűen választott hőst irányítva. A csapatok a térkép két átellenes pontján kezdenek egy Érkező Medence (Spawn Pool) nevű helyen, a Nexus (főközpont, szó szerint: összeköttetés) mellett. Az ellenfél Nexusának elpusztításával lehet megnyerni a játékot, vagy ha az ellenfél csapata feladja.</p>
+                    <p> A hősök a játék során folyamatosan tapasztalatot és aranyat gyűjtenek, ellenséges lények (hősök és minionok) illetve semleges szörnyek legyilkolásával, valamint tornyok és inhibitorok lerombolásával. Az aranyból különféle tárgyakat vehetnek, amelyek fokozzák a hatékonyságukat, képességeik erejét, vagy védelmet adnak. Első szinten kezdenek és a 18. szintig fejlődhetnek minden játék alkalmával, míg az Idézői szint, folyamatosan növekszik.</p></div>
+                    </div>
+                </div>
+                <h2 class="lol-közép">Játékmódok</h2>
+                <hr><br>
+                <h5>Jelenleg 2 állandó játékmód létezik a játékban , mely 2 különböző térképen zajlik. (játékbeli nevük Field of Justice, azaz Igazság Mezeje):</h5><br>
                 <h2 class ="lol-közép"> Az Igazság mezeje</h2>
-                    <p>Jelenleg 2 állandó játékmód létezik a játékban , mely 2 különböző térképen zajlik. (játékbeli nevük Field of Justice, azaz Igazság Mezeje):</p>
-                    <p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
-                    <p class ="lol-közép"><img src="lol képek\baron.jpg"; style="width: 50%;"></p>
-                    <p class ="lol-közép"> A Baron Nashor mérete egy hőshöz viszonyítva </p>
-                <h2 class="lol-közép">Ordító Szakadék:</h2>
-                    <p>a 2013 április végén megjelent (Aram) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p>
+                <hr>
+                <div class="row">
+                    <div class="col-lg-7"><p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
+                    </div>
+                    <div class="col-lg-5"><img src="lol képek\baron.jpg"; style="width: 100%;"><figcaption>A Baron Nashor mérete egy hőshöz viszonyítva</figcaption></div>
+                </div>
+
+                    <h2 class="lol-közép">Ordító Szakadék:</h2>
+                    <hr>
+                    <div class="row">
+                        <div class="col-lg-7"><p>a 2013 április végén megjelent (<b>Aram</b>) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p></div>
+                        <div class="col-lg-5"><img src="lol képek/aram-map.jpg" alt="Aram térképe"><figcaption>Az Aram térképe</figcaption></div>
+                    </div>
+
+
+
             <p class ="lol-közép"> </p>
 
-
+<h2 class="lol-közép">Sárkányok</h2>
 <div class="container">
     <div class="row">
-        <div class="col-lg-6"><img src="lol képek\sbIHjF7.jpg"> <figcaption>A sárkányoknak 6 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány, hextechsárkány és vegytechsárkány </figcaption></div>
+        <div class="col-lg-6"><img src="lol képek\sárkányok1.jpg"> <figcaption>A sárkányoknak 7 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány, hextechsárkány és vegytechsárkány és az ősi sárkány </figcaption></div>
         <div class="col-lg-6"><img src="lol képek\dragon-elder-1.jpg"> <figcaption>Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</figcaption></div>
     </div>
 </div>
@@ -124,7 +138,7 @@
 
 
             <h2 class ="lol-közép"> Minionok</h2><hr><br>
-            <p>A minionok feláldozható lények, amik automatikusan generálódnak a Nexusban, azzal a céllal, hogy az előre kiválasztott ösvényen haladva folyamatosan törjenek előre. Az első hullám a játék kezdete után másfél perccel indul, mind a kék, mind a piros csapat oldaláról, ezután 30 másodpercenként új hullámban jönnek és 3 percenként minden új minion erősödik. A tornyok felé 50%-kal többet, míg a hősök felé 15%-kal kevesebbet sebeznek. Fontos, hogy a minionok nem összetévesztendők a dzsungelben lévő semleges szörnyekkel. A minionok 'lelketlen háborús gépezetek' így nem éreznek, nem gondolkodnak. Mégis, csak bizonyos esetekben fognak támadni. Jelenleg négy fajtájuk van:</p>
+            <p>A minionok feláldozható lények, amik automatikusan generálódnak a Nexusban, azzal a céllal, hogy az előre kiválasztott ösvényen haladva folyamatosan törjenek előre. Az első hullám a játék kezdete után másfél perccel indul, mind a kék, mind a piros csapat oldaláról, ezután 30 másodpercenként új hullámban jönnek és 3 percenként minden új minion erősödik. A tornyok felé 50%-kal többet, míg a hősök felé 15%-kal kevesebbet sebeznek. Jelenleg négy fajtájuk van:</p>
             <ol>
             <li><b>Közelharci</b>: a legközelebbi ellenséges egységet támadják, erősebb védekezéssel rendelkeznek.
             <li><b>Távolsági</b>: 600 egységnyi távolságban támadnak. Elenyészően, de magasabb sebzéssel rendelkeznek, viszont gyengébbek is.
@@ -171,7 +185,7 @@
                     <div class="col-lg-6"><img src="lol képek\inhibitor.jpg">
             <figcaption>Az inhibitor</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\nexus.jpg"; width="70%">
+                    <div class="col-lg-6"><img src="lol képek\Nex-sus.jpg"; width="80%">
             <figcaption>A nexus</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p></div>
                     <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png" class="nyujtott">
