--- a/index.html
+++ b/index.html
@@ -40,8 +40,37 @@
             </table>
         </div>
     </header>
-    <div>
-        
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
+            <a href="grand.html">
+                <img src="/Képek/grand_linkpic.webp" alt="Grand Turismo" class="linkpic">
+                <div class="overlayer">
+                    <p class="overlayer_text">Grand Turismo</p>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
+            <a href="lol.html">
+                <img src="/Képek/lol_linkpic.jpg" alt="League of Legends" class="linkpic">
+                <div class="overlayer">
+                <p class="overlayer_text">League of Legends</p>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
+            <a href="mine.html">
+                <img src="/Képek/mine1_linkpic.jpg" alt="Minecraft" class="linkpic">
+                <div class="overlayer">
+                <p class="overlayer_text">Minecraft</p>
+                </div>
+            </a>
+            
+        </div>
+        <!--<div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+            <a href="abus.html">
+                <img src="/Képek/abus_linkpic" alt="Rólunk">
+            </a>
+        </div> -->
     </div>
     <footer>
 
