--- a/mine.html
+++ b/mine.html
@@ -22,7 +22,7 @@
                 </td>
                 <td>
                     <div class="dropdown">
-                        <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
+                        <button class="dropbtn">Kedvenc játékaink</button>
                             <div class="dropdown-romane-conti">
                                 <a href="grand.html">Grand Turismo</a>
                                 <a href="lol.html">League of Legends</a>
