--- a/grand.html
+++ b/grand.html
@@ -14,16 +14,16 @@
         <table>
             <tr>
                 <td>
-                    <a href="index.html" class="topnav active">Kezdőlap</a>
+                    <a href="index.html" class="topnav">Kezdőlap</a>
                 </td>
                 <td>
                     <a href="abus.html" class="topnav">Rólunk</a>
                 </td>
                 <td>
                     <div class="dropdown">
-                        <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
+                        <button class="dropbtn">Kedvenc játékaink</button>
                             <div class="dropdown-romane-conti">
-                                <a href="grand.html">Grand Turismo</a>
+                                <a href="grand.html" class="active">Grand Turismo</a>
                                 <a href="lol.html">League of Legends</a>
                                 <a href="mine.html">Minecraft</a>
                             </div>
