--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Főoldal</title>
 </head>
-<body>
+<body class="black">
     <header>
         <div class="topnav">
             <table>
@@ -23,7 +23,7 @@
                     </td>
                     <td>
                         <div class="dropdown">
-                            <button class="dropbtn">Menü <i class="bi bi-caret-down-fill"></i></button>
+                            <button class="dropbtn">Kedvenc játékaink</button>
                                 <div class="dropdown-romane-conti">
                                     <a href="grand.html">Grand Turismo</a>
                                     <a href="lol.html">League of Legends</a>
@@ -43,34 +43,41 @@
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="grand.html">
-                <img src="/Képek/grand_linkpic.webp" alt="Grand Turismo" class="linkpic">
+                <img src="grand_linkpic.webp" alt="Grand Turismo" class="linkpic">
                 <div class="overlayer">
                     <p class="overlayer_text">Grand Turismo</p>
+                    <p class="ov_bottom">- bemutató -</p>
                 </div>
             </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="lol.html">
-                <img src="/Képek/lol_linkpic.jpg" alt="League of Legends" class="linkpic">
+                <img src="lol_linkpic.jpg" alt="League of Legends" class="linkpic">
                 <div class="overlayer">
-                <p class="overlayer_text">League of Legends</p>
+                    <p class="overlayer_text">League of Legends</p>
+                    <p class="ov_bottom">- bemutató -</p>
                 </div>
             </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="mine.html">
-                <img src="/Képek/mine1_linkpic.jpg" alt="Minecraft" class="linkpic">
+                <img src="mine1_linkpic.jpg" alt="Minecraft" class="linkpic">
                 <div class="overlayer">
-                <p class="overlayer_text">Minecraft</p>
+                    <p class="overlayer_text">Minecraft</p>
+                    <p class="ov_bottom">- bemutató -</p>
                 </div>
             </a>
             
         </div>
-        <!--<div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+        <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
-                <img src="/Képek/abus_linkpic" alt="Rólunk">
+                <img src="rólunk_linkpic.jpg" alt="Rólunk" class="tag">
+                <div class="overlayer">
+                    <p class="overlayer_text">Rólunk</p>
+                    <p class="ov_bottom">- történetünk -</p>
+                </div>
             </a>
-        </div> -->
+        </div>
     </div>
     <footer>
 
