--- a/lol.html
+++ b/lol.html
@@ -47,7 +47,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-7 col-sm-12"><p> A League of Legends (rövidítve: LoL) valós idejű stratégiai játék, illetve online többjátékos csatamező, melyet a Warcraft III: The Frozen Throne videójátékhoz készült Defense of the Ancients (röviden DotA) mod ihletett. A játék fejlesztője és egyben kiadója a Riot Games; Kínában a Tencent Holdings forgalmazza.</p>
                     <p> A játék bejelentésére 2008. október 7-én került sor; a zárt bétateszt 2009. április 10-én vette kezdetét és 2009. október 22-én ért véget. Ezután a tesztelés lehetősége mindenki számára elérhetővé vált. A játék végül 2009. október 27-én jelent meg.</p></div>
-                        <div class="col-lg-7 col-md-5 col-sm-12"><img src="lol képek\league-of-legends.jpg" style="width: 100%;"></div>
+                        <div class="col-lg-7 col-md-5 col-sm-12"><img src="lol képek\league-of-legends.jpg" class="sz100"></div>
                     </div>
                 <br>
                     
@@ -70,14 +70,14 @@
                 <div class="row">
                     <div class="col-lg-7"><p><b>Idézők Szurdoka</b>: a klasszikus pálya, melyen három ösvény (top-felső, mid-középső és bot-alsó) van, ezeket a dzsungel választja el egymástól. Két 5 fős csapat küzd egymás ellen, hogy a másik csapat Nexusát lerombolják, vagy feladásra kényszerítsék őket. Ezen a térképen található Baron Nashor, a Szurdok Hírnöke, valamint a Sárkány. </p>
                     </div>
-                    <div class="col-lg-5"><img src="lol képek\baron.jpg"; style="width: 100%;"><figcaption>A Baron Nashor mérete egy hőshöz viszonyítva</figcaption></div>
-                </div>
+                    <div class="col-lg-5"><img src="lol képek\baron.jpg" class="sz100"><figcaption>A Baron Nashor mérete egy hőshöz viszonyítva</figcaption></div>
+                </div><br>
 
                     <h2 class="lol-közép">Ordító Szakadék:</h2>
                     <hr>
                     <div class="row">
                         <div class="col-lg-7"><p>a 2013 április végén megjelent (<b>Aram</b>) térkép egy hidat foglal magába, azaz egyetlen úttal rendelkezik, ahol a játékosok véletlenszerűen kisorsolt hőssel játszhatnak, szintén 5 vs 5. Ha nem azzal a hőssel szeretnének játszani 2 újrapörgetési lehetőségük van, ekkor egy új, szintén véletlenszerűen kisorsolt hőst kapnak. Ezt a lehetőséget az Ordító Szakadékon játszott mérkőzésekkel lehet szerezni. A másik lehetőségük a játékosoknak, hogy cserélnek csapattársukkal, amennyiben meg van mindkettőjüknek ugyanaz a hős, és a kért játékos is beleegyezik a cserébe. </p></div>
-                        <div class="col-lg-5"><img src="lol képek/aram-map.jpg" alt="Aram térképe"><figcaption>Az Aram térképe</figcaption></div>
+                        <div class="col-lg-5"><img src="lol képek/aram-map.jpg" alt="Aram térképe" class="sz100"><figcaption>Az Aram térképe</figcaption></div>
                     </div>
 
 
@@ -85,11 +85,14 @@
             <p class ="lol-közép"> </p>
 
 <h2 class="lol-közép">Sárkányok</h2>
+<hr><br>
 <div class="container">
     <div class="row">
-        <div class="col-lg-6"><img src="lol képek\sárkányok1.jpg"> <figcaption>A sárkányoknak 7 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány, hextechsárkány és vegytechsárkány és az ősi sárkány </figcaption></div>
-        <div class="col-lg-6"><img src="lol képek\dragon-elder-1.jpg"> <figcaption>Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</figcaption></div>
+        <div class="col-lg-7 col-sm-12"><img src="lol képek\sárkányok1.jpg" class="sz100"> <figcaption>A sárkányoknak 7 fajtája van: tűzsárkány, földsárkány, vízsárkány, levegősárkány</figcaption></div>
+        <div class="col-lg-5 col-sm-12"><img src="lol képek\sárkányok2.jpg" class="sz100"> <figcaption>A két legújabb: hextechsárkány és vegytechsárkány</figcaption></div>
+        <div class="col-lg-6 col-sm-12"><img src="lol képek\dragon-elder-1.jpg" class="sz100"> <figcaption>Miután az egyik csapat megszerezte a sárkánylelket, megjelenik az ősi sárkány</figcaption></div>
     </div>
+
 </div>
 <br>
             <h2 class ="lol-közép"> A hősök</h2>
@@ -147,10 +150,10 @@
                 
             <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Harcosok.jpg"> <figcaption>A közelharci minionok</figcaption></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\mage minion.png"> <figcaption>A távolsági minionok</figcaption></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\cannon.jpg"> <figcaption>Az ostromminionok</figcaption></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12"><img src="lol képek\Super_minion.jpg"> <figcaption>A Nexustörő minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\Harcosok.jpg" class="sz100"> <figcaption>A közelharci minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\mage minion.png" class="sz100"> <figcaption>A távolsági minionok</figcaption></div>
+                        <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\cannon.jpg" class="sz100"> <figcaption>Az ostromminionok</figcaption></div>
+                        <div class="col-lg-6 col-md-12 col-sm-12"><img src="lol képek\Super_minion.jpg" class="sz100"> <figcaption>A Nexustörő minionok</figcaption></div>
                     </div>
                 </div>
             <h2 class ="lol-közép">Rúnák</h2><hr><br>
@@ -176,19 +179,20 @@
                 </div>
             </div>
             <h2 class ="lol-közép">Épületek</h2>
+            <hr><br>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6"><b>Torony</b>: célja a védelem, a minionhullámok lassítása. Minden lövéssel 37%-kal növekszik a sebzésük, így nem érdemes sokáig célpont maradni. Mikor elérte a maximális sebzési bónuszt (75%), +25%-kal többet sebez. A szövetséges tornyok közelében a láthatatlan ellenséges egységek láthatóvá, így támadhatóvá válnak. A külső tornyok életereje 4000 pont, a belső tornyoké 4000 pont, az inhibitor tornyok 4000 ponttal és élet-regenerálódással, a nexus tornyok 2500 ponttal és szintén élet-regenerálódással rendelkeznek.</p></div>
                     <div class="col-lg-6"><img src="lol képek\Summoner's_Rift_Outer_turret.png">
-            <figcaption>A torony felépítése</figcaption></div>
+            <figcaption>A torony</figcaption></div>
                     <div class="col-lg-6"><p><b>Inhibitor</b>: meggátolja, hogy az ellenfél oldalán Szuperminionok induljanak el. Az inhibitorok nem sebeznek, bár a hősök, csak alapsebzésük 85%-át tudják kiosztani, plusz a bónusz fizikai sebzést, vagy a varázserő 40%-át, attól függ, melyik a magasabb. 4000 életponttal rendelkeznek és az elpusztítás után négy perccel újra üzemkészek. Mikor a bemondó figyelmeztet, hogy az inhibitor hamarosan visszaáll, onnantól kezdve 15 másodperc múlva felépül.</p></div>
                     <div class="col-lg-6"><img src="lol képek\inhibitor.jpg">
             <figcaption>Az inhibitor</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus</b>: ez indítja el a minionokat az útjukra, valamint a Nexus tartja fent a kapcsolatot az Idéző és hőse között. Tehát, amikor a Nexus elpusztul, a kapcsolat megszakad és a játék véget ér. 5500 élettel és 25 élet-regenerációval rendelkezik.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\Nex-sus.jpg"; width="80%">
+                    <div class="col-lg-6"><img src="lol képek\Nex-sus.jpg" style="width: 80%;">
             <figcaption>A nexus</figcaption></div>
                     <div class="col-lg-6"><p><b>Nexus Obeliszk</b>: az érkező medence sarkában található torony, ami célozhatatlan. A hatótávján belül (ami maga a medence) 1000 sebzést oszt ki 0,5 másodperc alatt. Ez semmilyen páncéllal, varázsellenállással vagy képességgel nem védhető.</p></div>
-                    <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png" class="nyujtott">
+                    <div class="col-lg-6"><img src="lol képek\Summoners_Rift_Nexus_Obelisk.png">
             <figcaption>A nexus obeliszk<figcaption></div>
                 </div>
             </div>
@@ -200,7 +204,7 @@
             <p>Az első évad lezárásaként megrendezett bajnokságnak a Dreamhack svéd rendezvény adott otthont, 2011 júniusában. A százezer dollár összdíjazású bajnokságot az európai Fnatic csapat nyerte. <br>
             A meccsek nézettsége rekordokat döntött, a legmagasabb mért érték több mint kétszázezer néző volt és összesen több mint 1.6 millió nézője volt a bajnokságnak.</p></div>
             <div class="col-lg-1"></div>
-                    <div class="col-lg-4 col-md-6 col-sm-12"><img src="lol képek\lol-group.jpg"; style="width: 100%;"><figcaption>Néhány népszerű LoL e-sport csapat</figcaption></div>
+                    <div class="col-lg-4 col-md-6 col-sm-12"><img src="lol képek\lol-group.jpg" class="sz100"><figcaption>Néhány népszerű LoL e-sport csapat</figcaption></div>
                 </div>
             </div>
         </div>
