--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!--Referenciaoldal: https://mick-gordon.com/-->
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Főoldal</title>
 </head>
+
 <body class="black">
     <header>
         <div class="topnav">
@@ -24,11 +26,11 @@
                     <td>
                         <div class="dropdown">
                             <button class="dropbtn">Kedvenc játékaink</button>
-                                <div class="dropdown-romane-conti">
-                                    <a href="grand.html">Grand Turismo</a>
-                                    <a href="lol.html">League of Legends</a>
-                                    <a href="mine.html">Minecraft</a>
-                                </div>
+                            <div class="dropdown-romane-conti">
+                                <a href="grand.html">Grand Turismo</a>
+                                <a href="lol.html">League of Legends</a>
+                                <a href="mine.html">Minecraft</a>
+                            </div>
                         </div>
                     </td>
                     <td class="right">
@@ -42,45 +44,49 @@
     </header>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="grand.html">
-                <img src="grand_linkpic.webp" alt="Grand Turismo" class="linkpic">
-                <div class="overlayer">
-                    <p class="overlayer_text">Grand Turismo</p>
-                    <p class="ov_bottom">- bemutató -</p>
-                </div>
+            <a href="grand.html" class="linkpic">
+                <img src="grand_linkpic.webp" alt="Gran Turismo" class="linkpic">
+
             </a>
+            <div class="overlayer">
+                <p class="overlayer_text">Gran Turismo</p>
+                <p class="ov_bottom">- bemutató -</p>
+            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="lol.html">
+            <a href="lol.html" class="linkpic">
                 <img src="lol_linkpic.jpg" alt="League of Legends" class="linkpic">
-                <div class="overlayer">
-                    <p class="overlayer_text">League of Legends</p>
-                    <p class="ov_bottom">- bemutató -</p>
-                </div>
+
             </a>
+            <div class="overlayer">
+                <p class="overlayer_text">League of Legends</p>
+                <p class="ov_bottom">- bemutató -</p>
+            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="mine.html">
-                <img src="mine1_linkpic.jpg" alt="Minecraft" class="linkpic">
-                <div class="overlayer">
-                    <p class="overlayer_text">Minecraft</p>
-                    <p class="ov_bottom">- bemutató -</p>
-                </div>
+            <a href="mine.html" class="linkpic">
+                <img src="mine_linkpic.webp" alt="Minecraft" class="linkpic">
+
             </a>
-            
+            <div class="overlayer">
+                <p class="overlayer_text">Minecraft</p>
+                <p class="ov_bottom">- bemutató -</p>
+            </div>
         </div>
         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
                 <img src="rólunk_linkpic.jpg" alt="Rólunk" class="tag">
-                <div class="overlayer">
-                    <p class="overlayer_text">Rólunk</p>
-                    <p class="ov_bottom">- történetünk -</p>
-                </div>
+
             </a>
+            <div class="overlayer">
+                <p class="overlayer_text">Rólunk</p>
+                <p class="ov_bottom">- történetünk -</p>
+            </div>
         </div>
     </div>
     <footer>
 
     </footer>
 </body>
+
 </html>
