--- a/grand.html
+++ b/grand.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sybi_general.css">
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="grand.css">
     <script src="sybi.js"></script>
     <title>Gkút - Grand Turismo</title>
 </head>
@@ -60,7 +61,7 @@
 <p>Jamaucsi elmondása szerint az első két játék gépjármű-modelljei 300 poligonból, a Gran Turismo 3: A-Specben és a Gran Turismo 4-ben 4000 poligonból, míg a Gran Turismo 5-ben a „prémiumautók” akár 500 000 poligonból épültek fel.</p>
     
 
-<table>
+<table class="Típusok col-lg-12">
     <thead>
         <th>Cím</th>
         <th>Megjelenés</th>
@@ -137,7 +138,7 @@
 
 <h2>Másodlagos megjelenések</h2>
 
-<table>
+<table class="Megjelenések col-lg-12">
     <thead>
         <th>Cím</th>
         <th>Megjelenés</th>
@@ -211,7 +212,8 @@
         <td>4 670 000</td>
     </tr>
 </table>
-<table>
+<br>
+<table class="Verziók">
     <thead>
         <th>Cím</th>
         <th>Megjegyzés</th>
@@ -258,7 +260,7 @@
 <p>A Gran Turismo sorozat részei a következő megjelenéséig igen kedveltek a hétköznapi játékosoktól kezdve a profi szimulátor rajongókig. A sikerességének köszönhetően, a sorozat 7 esetben került be a Guinnes Rekordok Könyvének 2008-as, Játékos kiadásába. Ezek között szerepelnek a „Legtöbb jármű egy versenyjátékban”, „Legjobb eladásokkal rendelkező PlayStation-játék”, „Versenyjátékban szereplő legöregebb autó” és a „Versenyjátékhoz járó leghosszabb használati útmutató”.</p>
 
 <h2>Átlagpontszámok</h2>
-<table>
+<table class="Rating col-lg-12">
     <thead>
         <th>Játék</th>
         <th>GameRankings</th>
@@ -334,15 +336,18 @@
 
 <h3>Hivatalos szimulátor csomagok</h3>
 <p>A Polyphony Digital együttműködött a perifériákat gyártó Logitech-el és az autóalkatrészeket gyártó Sparco-val, hogy hivatalos vezetési szimulátorkészleteket tervezzenek a Gran Turismo franchise számára. A legújabb termékmegnevezés a Driving Force GT. Két másik versenykormány kompatibilis a Gran Turismo-val.</p>
+<br>
 
 <h3>Hivatalos modellautó készletek</h3>
 <p>2009-ben a HPI Racing rádióvezérlésű modellautógyár hivatalos RC-autó-összeköttetést adott ki: a Gran Turismo által tervezett HPI E10 RTR Ford GT LM Race Car Spec II-t (200mm), egy előre beépített, hivatalosan engedélyezett rádióvezérlésű autóskészletet. úgy készült, hogy pontosan úgy nézzen ki, mint a Gran Turismo 4 borítóautója. A jövőbeni kiadások tervei között szerepel további készletek kiadása más Gran Turismo borítóautók lemásolására.</p>
+<br>
 
 <h3>Gran Turismo kávézó</h3>
 <p>2009-ben megnyílt egy kávézó A Twin Ring Motegi nevű versenypályán.</p>
+<br>
 
 <h3>Utcanevek</h3>
-<p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p>
+<p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p><br>
 <p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
 
 </body>
