--- a/grand.html
+++ b/grand.html
@@ -264,7 +264,7 @@
     <thead>
         <th>Játék</th>
         <th>GameRankings</th>
-        <th>Metacrritic</th>
+        <th>Metacritic</th>
     </thead>
     <tr>
         <td>Gran Turismo</td>
