--- a/grand.html
+++ b/grand.html
@@ -32,7 +32,7 @@
                 </td>
                 <td class="right">
                     <a href="index.html" class="topnav right">
-                        <img src="" alt="Logo" title="Vissza a kezdőlapra">
+                        <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
                     </a>
                 </td>
             </tr>
