Navbar navdate 04 és Index fix
Minden oldalon működésre bítram és a reszponzivitása is mükszik.
A kezdőlap reszponzivitása is él.

--- a/index.html
+++ b/index.html
@@ -6,81 +6,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sybi_general.css">
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="sybi_general.css">
     <script src="sybi.js"></script>
     <title>Gkút - Főoldal</title>
 </head>
 <body class="black">
     <header>
         <div class="topnav">
-            <table>
-                <tr>
-                    <td>
-                        <a href="index.html" class="topnav active">Kezdőlap</a>
-                    </td>
-                    <td>
-                        <a href="abus.html" class="topnav">Rólunk</a>
-                    </td>
-                    <td>
-                        <div class="dropdown">
-                            <button class="dropbtn">Kedvenc játékaink</button>
-                            <div class="dropdown-romane-conti">
-                                <a href="grand.html">Grand Turismo</a>
-                                <a href="lol.html">League of Legends</a>
-                                <a href="mine.html">Minecraft</a>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="right">
-                        <a href="index.html" class="topnav right">
-                            <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
-                        </a>
-                    </td>
-                </tr>
-            </table>
+            <div class="left">
+                <a href="index.html" class="topnav active">Kezdőlap</a>
+                <a href="abus.html" class="topnav">Rólunk</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Kedvenc játékaink</button>
+                    <div class="dropdown-romane-conti">
+                        <a href="grand.html">Grand Turismo</a>
+                        <a href="lol.html">League of Legends</a>
+                        <a href="mine.html">Minecraft</a>
+                    </div>
+                </div>
+            </div>
+            <a href="index.html" class="right">
+                <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+            </a>
         </div>
     </header>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="grand.html" class="linkpic">
-                <img src="grand_linkpic.webp" alt="Gran Turismo" class="linkpic">
-
+            <a href="grand.html">
+                <span class="linkpic">
+                    <span>
+                        <img src="grand_linkpic.webp" alt="Gran Turismo" class="linkpic"></span>
+                </span>
+                <div class="overlayer">
+                    <p class="overlayer_text">Gran Turismo</p>
+                    <p class="ov_bottom">- bemutató -</p>
+                </div>
             </a>
-            <div class="overlayer">
-                <p class="overlayer_text">Gran Turismo</p>
-                <p class="ov_bottom">- bemutató -</p>
-            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="lol.html" class="linkpic">
-                <img src="lol_linkpic.jpg" alt="League of Legends" class="linkpic">
-
+            <a href="lol.html">
+                <span class="linkpic">
+                    <img src="lol_linkpic.jpg" alt="League of Legends" class="linkpic">
+                </span>
+                <div class="overlayer">
+                    <p class="overlayer_text">League of Legends</p>
+                    <p class="ov_bottom">- bemutató -</p>
+                </div>
             </a>
-            <div class="overlayer">
-                <p class="overlayer_text">League of Legends</p>
-                <p class="ov_bottom">- bemutató -</p>
-            </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
-            <a href="mine.html" class="linkpic">
-                <img src="mine_linkpic.webp" alt="Minecraft" class="linkpic">
-
+            <a href="mine.html">
+                <span class="linkpic">
+                    <img src="mine_linkpic.webp" alt="Minecraft" class="linkpic">
+                </span>
+                <div class="overlayer">
+                    <p class="overlayer_text">Minecraft</p>
+                    <p class="ov_bottom">- bemutató -</p>
+                </div>
             </a>
-            <div class="overlayer">
-                <p class="overlayer_text">Minecraft</p>
-                <p class="ov_bottom">- bemutató -</p>
-            </div>
         </div>
         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
-                <img src="rólunk_linkpic.jpg" alt="Rólunk" class="tag">
-
+                <span id="tag">
+                    <img src="rólunk_linkpic.jpg" alt="Rólunk" abus.html id="tag">
+                </span>
+                <div class="overlayer">
+                    <p class="overlayer_text">Rólunk</p>
+                    <p class="ov_bottom">- történetünk -</p>
+                </div>
             </a>
-            <div class="overlayer">
-                <p class="overlayer_text">Rólunk</p>
-                <p class="ov_bottom">- történetünk -</p>
-            </div>
         </div>
     </div>
     <footer>
