--- a/grand.html
+++ b/grand.html
@@ -12,31 +12,21 @@
 </head>
 <header>
     <div class="topnav">
-        <table>
-            <tr>
-                <td>
-                    <a href="index.html" class="topnav">Kezdőlap</a>
-                </td>
-                <td>
-                    <a href="abus.html" class="topnav">Rólunk</a>
-                </td>
-                <td>
-                    <div class="dropdown">
-                        <button class="dropbtn">Kedvenc játékaink</button>
-                            <div class="dropdown-romane-conti">
-                                <a href="grand.html" class="active">Grand Turismo</a>
-                                <a href="lol.html">League of Legends</a>
-                                <a href="mine.html">Minecraft</a>
-                            </div>
-                    </div>
-                </td>
-                <td class="right">
-                    <a href="index.html" class="topnav right">
-                        <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
-                    </a>
-                </td>
-            </tr>
-        </table>
+        <div class="left">
+            <a href="index.html" class="topnav active">Kezdőlap</a>
+            <a href="abus.html" class="topnav">Rólunk</a>
+            <div class="dropdown">
+                <button class="dropbtn">Kedvenc játékaink</button>
+                <div class="dropdown-romane-conti">
+                    <a href="grand.html">Grand Turismo</a>
+                    <a href="lol.html">League of Legends</a>
+                    <a href="mine.html">Minecraft</a>
+                </div>
+            </div>
+        </div>
+        <a href="index.html" class="right">
+            <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+        </a>
     </div>
 </header>
 <body>
