--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
                 <span id="tag">
-                    <img src="rólunk_linkpic.jpg" alt="Rólunk" abus.html id="tag">
+                    <img src="abus_linkpic4.jpg" alt="Rólunk" abus.html id="tag">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Rólunk</p>
@@ -79,7 +79,19 @@
         </div>
     </div>
     <footer>
-
+        <div id="footer" class="row">
+            <div class="col-lg-6 col-sm-12">
+                <span>Kapcsolatba lépnél velünk?</span> <br>
+                <img src="">email címünk: <br>
+                <a href="mailto:gemeskut@nincsmail.hu">gemeskut@nincsmail.hu</a> <br>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                Kövess minket:
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 
