--- a/grand.html
+++ b/grand.html
@@ -339,6 +339,61 @@
 <h3>Utcanevek</h3>
 <p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p><br>
 <p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
-
+<footer>
+    <div class="row footer">
+        <div class="col-lg-5">
+            <h1 class="footer-title">Oldalaink</h1>
+            <ul class="f-ul">
+                <li>
+                    <a href="index.html">Főoldal</a>
+                </li>
+                <li>
+                    <a href="abus.html">Rólunk</a>
+                </li>
+                <li>
+                    <a href="grand.html">Gran Turismo bemutató</a>
+                </li>
+                <li>
+                    <a href="lol.html">League of Legends bemutató</a>
+                </li>
+                <li>
+                    <a href="mine.html">Rólunk</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-5">
+            <h1 class="footer-title">Elérhetőségeink</h1>
+            <ul class="f-ul">
+                <li>
+                    Gémeskút Csapat
+                </li>
+                <li>
+                    <span>Budapest, Izébizé utca 12</span>
+                </li>
+                <li>
+                    <span>+36 20 468 8923</span>
+                </li>
+                <li>
+                    <span>gemeskut@nincsmail.hu</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-2">
+            <h1 class="footer-title">Követnél minket?</h1>
+            <p>Az alábbi linkeken megteheted:</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                </a>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="icon2.png" alt="Facebook" class="f-ikon">
+                </a>
+                <a href="https://twitter.com/?lang=hu" target="_blank">
+                    <img src="icon3.png" alt="Twitter" class="f-ikon">
+                </a>
+                <br>
+            </div>
+        </div>
+</footer>
 </body>
 </html>
