--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="sybi.js"></script>
     <title>Gkút - Főoldal</title>
 </head>
+
 <body class="black">
     <header>
         <div class="topnav">
@@ -58,7 +59,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="mine.html">
                 <span class="linkpic">
-                    <img src="mine_linkpic.webp" alt="Minecraft" class="linkpic">
+                    <img src="mine_linkpic2.jpeg" alt="Minecraft" class="linkpic">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Minecraft</p>
@@ -69,7 +70,7 @@
         <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12 cont">
             <a href="abus.html">
                 <span id="tag">
-                    <img src="abus_linkpic4.jpg" alt="Rólunk" abus.html id="tag">
+                    <img src="abus_linkpic4.jpg" alt="Rólunk" id="tag">
                 </span>
                 <div class="overlayer">
                     <p class="overlayer_text">Rólunk</p>
@@ -79,19 +80,60 @@
         </div>
     </div>
     <footer>
-        <div id="footer" class="row">
-            <div class="col-lg-6 col-sm-12">
-                <span>Kapcsolatba lépnél velünk?</span> <br>
-                <img src="">email címünk: <br>
-                <a href="mailto:gemeskut@nincsmail.hu">gemeskut@nincsmail.hu</a> <br>
+        <div class="row footer">
+            <div class="col-lg-5">
+                <h1 class="footer-title">Oldalaink</h1>
+                <ul class="f-ul">
+                    <li>
+                        <a href="index.html">Főoldal</a>
+                    </li>
+                    <li>
+                        <a href="abus.html">Rólunk</a>
+                    </li>
+                    <li>
+                        <a href="grand.html">Gran Turismo bemutató</a>
+                    </li>
+                    <li>
+                        <a href="lol.html">League of Legends bemutató</a>
+                    </li>
+                    <li>
+                        <a href="mine.html">Rólunk</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-lg-6 col-sm-12">
-                Kövess minket:
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+            <div class="col-lg-5">
+                <h1 class="footer-title">Elérhetőségeink</h1>
+                <ul class="f-ul">
+                    <li>
+                        Gémeskút Csapat
+                    </li>
+                    <li>
+                        <span>Budapest, Izébizé utca 12</span>
+                    </li>
+                    <li>
+                        <span>+36 20 468 8923</span>
+                    </li>
+                    <li>
+                        <span>gemeskut@nincsmail.hu</span>
+                    </li>
+                </ul>
             </div>
-        </div>
+            <div class="col-lg-2">
+                <h1 class="footer-title">Követnél minket?</h1>
+                <p>Az alábbi linkeken megteheted:</p>
+                <div class="social-links">
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                    </a>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="icon2.png" alt="Facebook" class="f-ikon">
+                    </a>
+                    <a href="https://twitter.com/?lang=hu" target="_blank">
+                        <img src="icon3.png" alt="Twitter" class="f-ikon">
+                    </a>
+                    <br>
+                </div>
+            </div>
     </footer>
 </body>
 
