--- a/lol.html
+++ b/lol.html
@@ -200,6 +200,61 @@
             </div>
         </div>
 
-
+<footer>
+    <div class="row footer">
+        <div class="col-lg-5">
+            <h1 class="footer-title">Oldalaink</h1>
+            <ul class="f-ul">
+                <li>
+                    <a href="index.html">Főoldal</a>
+                </li>
+                <li>
+                    <a href="abus.html">Rólunk</a>
+                </li>
+                <li>
+                    <a href="grand.html">Gran Turismo bemutató</a>
+                </li>
+                <li>
+                    <a href="lol.html">League of Legends bemutató</a>
+                </li>
+                <li>
+                    <a href="mine.html">Rólunk</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-5">
+            <h1 class="footer-title">Elérhetőségeink</h1>
+            <ul class="f-ul">
+                <li>
+                    Gémeskút Csapat
+                </li>
+                <li>
+                    <span>Budapest, Izébizé utca 12</span>
+                </li>
+                <li>
+                    <span>+36 20 468 8923</span>
+                </li>
+                <li>
+                    <span>gemeskut@nincsmail.hu</span>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-2">
+            <h1 class="footer-title">Követnél minket?</h1>
+            <p>Az alábbi linkeken megteheted:</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="icon1.png" alt="Instagramm" class="f-ikon">
+                </a>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="icon2.png" alt="Facebook" class="f-ikon">
+                </a>
+                <a href="https://twitter.com/?lang=hu" target="_blank">
+                    <img src="icon3.png" alt="Twitter" class="f-ikon">
+                </a>
+                <br>
+            </div>
+        </div>
+</footer>
 </body>
 </html>
