--- a/abus.html
+++ b/abus.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sybi_general.css">
     <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="sybi_general.css">
     <script src="sybi.js"></script>
     <title>Gkút - Rólunk</title>
 </head>
-<body>
+<body class="bpic">
     <header>
         <div class="topnav">
             <div class="left">
