--- a/grand.html
+++ b/grand.html
@@ -341,7 +341,7 @@
 <p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
 <footer>
     <div class="row footer">
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-md-6 col-sm-12">
             <h1 class="footer-title">Oldalaink</h1>
             <ul class="f-ul">
                 <li>
@@ -361,7 +361,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-md-6 col-sm-12">
             <h1 class="footer-title">Elérhetőségeink</h1>
             <ul class="f-ul">
                 <li>
@@ -378,7 +378,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-12  col-sm-12">
             <h1 class="footer-title">Követnél minket?</h1>
             <p>Az alábbi linkeken megteheted:</p>
             <div class="social-links">
