--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <div class="dropdown">
                     <button class="dropbtn">Kedvenc játékaink</button>
                     <div class="dropdown-romane-conti">
-                        <a href="grand.html">Grand Turismo</a>
+                        <a href="grand.html">Gran Turismo</a>
                         <a href="lol.html">League of Legends</a>
                         <a href="mine.html">Minecraft</a>
                     </div>
                 </div>
             </div>
             <a href="index.html" class="right">
-                <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+                <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
             </a>
         </div>
     </header>
@@ -81,7 +81,7 @@
     </div>
     <footer>
         <div class="row footer">
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Oldalaink</h1>
                 <ul class="f-ul">
                     <li>
@@ -101,7 +101,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Elérhetőségeink</h1>
                 <ul class="f-ul">
                     <li>
@@ -118,7 +118,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-12  col-sm-12">
                 <h1 class="footer-title">Követnél minket?</h1>
                 <p>Az alábbi linkeken megteheted:</p>
                 <div class="social-links">
