--- a/mine.html
+++ b/mine.html
@@ -796,7 +796,7 @@
     <!--Lejátszási lista a Game Theorists csatornáról-->
     <footer>
         <div class="row footer">
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Oldalaink</h1>
                 <ul class="f-ul">
                     <li>
@@ -816,7 +816,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Elérhetőségeink</h1>
                 <ul class="f-ul">
                     <li>
@@ -833,7 +833,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-12  col-sm-12">
                 <h1 class="footer-title">Követnél minket?</h1>
                 <p>Az alábbi linkeken megteheted:</p>
                 <div class="social-links">
