--- a/abus.html
+++ b/abus.html
@@ -34,7 +34,7 @@
     </div>
     <footer>
         <div class="row footer">
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Oldalaink</h1>
                 <ul class="f-ul">
                     <li>
@@ -54,7 +54,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1 class="footer-title">Elérhetőségeink</h1>
                 <ul class="f-ul">
                     <li>
@@ -71,7 +71,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-12  col-sm-12">
                 <h1 class="footer-title">Követnél minket?</h1>
                 <p>Az alábbi linkeken megteheted:</p>
                 <div class="social-links">
