--- a/lol.html
+++ b/lol.html
@@ -202,7 +202,7 @@
 
 <footer>
     <div class="row footer">
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-md-6 col-sm-12">
             <h1 class="footer-title">Oldalaink</h1>
             <ul class="f-ul">
                 <li>
@@ -222,7 +222,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-md-6 col-sm-12">
             <h1 class="footer-title">Elérhetőségeink</h1>
             <ul class="f-ul">
                 <li>
@@ -239,7 +239,7 @@
                 </li>
             </ul>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 col-md-12  col-sm-12">
             <h1 class="footer-title">Követnél minket?</h1>
             <p>Az alábbi linkeken megteheted:</p>
             <div class="social-links">
