--- a/mine.html
+++ b/mine.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <div id="body">
-        Kezdetek
+        <h1>Kezdetek</h1>
 
         A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
         vagyis 12 éve.
@@ -42,7 +42,27 @@
 
         Egy Véletleszerűe generált világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell
         szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk és a legyőzése után sem lesz
-        vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="">Speedrunok</a> vége is ekkor van.
+        vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank">Speedrun</a>-ok vége is ekkor van.
+
+        <h1>Mobok</h1>
+        <h2>Overworld</h2>
+        <h3>Békés</h3>
+        
+        <h3>Semleges</h3>
+
+        <h3>Aggresszív</h3>
+
+
+        <h2>Nether</h2>
+        <h3>Békés</h3>
+        <h3>Semleges</h3>
+        <h3>Aggresszív</h3>
+
+        <h2>End</h2>
+
+        <h3>Semleges</h3>
+
+        <h3>Boss</h3>
 
 
         <h1>Játékmódok</h1>
