Javítgatások és egy kis tesztelés
Az Opera sötét mód kényszerítője adott egy ötletet, amit bekapcsoltam nálatok a body-ba írt bc osztállyal, ha nem tetszik vegyétek nyugodtan ki, szerintem viszont sokkal jobb mint volt.

--- a/mine.html
+++ b/mine.html
@@ -21,14 +21,14 @@
                 <div class="dropdown">
                     <button class="dropbtn">Kedvenc játékaink</button>
                     <div class="dropdown-romane-conti">
-                        <a href="grand.html">Grand Turismo</a>
+                        <a href="grand.html">Gran Turismo</a>
                         <a href="lol.html">League of Legends</a>
                         <a href="mine.html">Minecraft</a>
                     </div>
                 </div>
             </div>
             <a href="index.html" class="right">
-                <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+                <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
             </a>
         </div>
     </header>
