--- a/grand.html
+++ b/grand.html
@@ -18,18 +18,18 @@
             <div class="dropdown">
                 <button class="dropbtn">Kedvenc játékaink</button>
                 <div class="dropdown-romane-conti">
-                    <a href="grand.html">Grand Turismo</a>
+                    <a href="grand.html">Gran Turismo</a>
                     <a href="lol.html">League of Legends</a>
                     <a href="mine.html">Minecraft</a>
                 </div>
             </div>
         </div>
         <a href="index.html" class="right">
-            <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+            <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
         </a>
     </div>
 </header>
-<body>
+<body class="bc">
     <h1>Gran Turismo</h1>
 
 <p>Gran Turismo (olasz, jelentése nagy túraautó), rövidítve GT, autóverseny-videójáték sorozat, melyet a Polyphony Digital fejleszt és a Sony Interactive Entertainment jelentet meg.</p>
