--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Gkút - Főoldal</title>
 </head>
 
-<body class="black">
+<body class="bc">
     <header>
         <div class="topnav">
             <div class="left">
