--- a/lol.html
+++ b/lol.html
@@ -18,20 +18,20 @@
             <div class="dropdown">
                 <button class="dropbtn">Kedvenc játékaink</button>
                 <div class="dropdown-romane-conti">
-                    <a href="grand.html">Grand Turismo</a>
+                    <a href="grand.html">Gran Turismo</a>
                     <a href="lol.html">League of Legends</a>
                     <a href="mine.html">Minecraft</a>
                 </div>
             </div>
         </div>
         <a href="index.html" class="right">
-            <img id="logo" src="logo.png" alt="Logo" title="Vissza a kezdőlapra">
+            <img id="logo" src="logo1.png" alt="Logo" title="Vissza a kezdőlapra">
         </a>
     </div>
 </header>            
 <a href="#top"><img src="Névtelen.png" alt="" style="float: right; position: fixed; user-select:auto;"></a>
 
-<body id="top">
+<body id="top" class="bc">
         <div class="lol-body-div">
             <h1 class="lolcím"><b>Mi is az a League of Legends?</b></h1>
             <hr style="text-align: center;"><br>
